Adicionada lógica da flag para delete, e deleção do classifications.